# audit-local-1

./: .gitignore  CURSOR_RULES.md  README.md  check_connections.py  docker-compose.yml  package-lock.json  package.json  status_out.txt
ai/: rag_setup.py
ai/chroma_db/: chroma.sqlite3
ai/training_data/: README.md
backend/: main.py  notice_parser.py  requirements.txt  sample.xml  tally_parser.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  NoticeDoctor.css  NoticeDoctor.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
ledgerx/: .gitignore  CURSOR_RULES.md  STRUCTURE.txt
ledgerx/apps/desktop/: README.md  index.html  package-lock.json  package.json
ledgerx/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
ledgerx/apps/desktop/src-tauri/capabilities/: default.json
ledgerx/apps/desktop/src-tauri/src/: lib.rs  main.rs
ledgerx/apps/mobile/: README.md  app.json  package-lock.json  package.json  tsconfig.json
ledgerx/apps/web/: Dockerfile  build_result.txt  build_result2.txt  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  theme_fixer.py  theme_updater.py  ts_errors.txt
ledgerx/backend/: Dockerfile  add_auth_method.py  cleanup_social_users.py  drop_username_constraint.py  fix_db.py  init_db.py  kill-port-8001.ps1  main.py  requirements.txt
ledgerx/backend/ai/: __init__.py  ghost_analyst.py  notice_doctor.py  rag_setup.py  tax_optimiser.py
ledgerx/backend/core/: __init__.py  (+3 more)
(+127 files in other folders)
