[package]
name = "audit-local"
version = "0.1.0"
description = "Audit-Local — desktop app for Indian CAs. 100% offline."
edition = "2021"
rust-version = "1.70"

[lib]
name = "audit_local_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
